adding better structure

--- a/book.toml
+++ b/book.toml
@@ -5,5 +5,12 @@ multilingual = false
 src = "src"
 title = "Haixuan Xavier Tao"
 
+[rust]
+edition = "2018"
+
+[output.html.playground]
+editable = true
+
+
 [output.html]
 additional-css = ["custom.css"]
