--- a/book.toml
+++ b/book.toml
@@ -13,4 +13,4 @@ editable = true
 
 [output.html]
 additional-css = ["custom.css"]
-google-analytics = "G-F58YNE6LHC"
+google-analytics = "284355753"
