Adding google analytics

--- a/book.toml
+++ b/book.toml
@@ -13,4 +13,4 @@ editable = true
 
 [output.html]
 additional-css = ["custom.css"]
-google-analytics = "284355753"
+google-analytics = "G-K1KMR3DSH9"
